2002-09-04    Will Cohen  <wcohen@redhat.com>

	* module/op_rtc.c: move to ...
	* module/x86/op_rtc.c: here
	* module/Makefile.in:
	* module/x86/Makefile.in: reflect file move

2002-09-03  Will Cohen  <wcohen@redhat.com>

	* module/oprofile.h: (regparm3): remove, use FASTCALL instead.
	* module/oprofile.c: (op_do_profile): Eliminate regparm3.

2002-09-03  Will Cohen  <wcohen@redhat.com>

	* module/oprofile.c: (oprof_read, oprof_note_read): Return ssize_t.

2002-08-30  Will Cohen <wcohen@nc.rr.com>

	* Makefile.in:
	* make.common.in: more DESTDIR change

2002-09-02  Dave Jones <davej@suse.de>

	* module/x86/cpu_type.c: support hammer in ia32 mode

2002-09-02  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: mention Qt 3
 
2002-08-30  Will Cohen <wcohen@nc.rr.com>

	* doc/Makefile.in: Set MANDIR and CATDIR based on DESTDIR.

2002-08-16  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_kernel.c:
	* dae/opd_kernel.h:
	* dae/opd_proc.c:
	* dae/opd_proc.h:
	* dae/oprofiled.c:
	* libop/op_hw_config.h:
	* libop/op_interface.h:
	* module/oprofile.c:
	* module/oprofile.h: change the layout of data used between
	  daemon/module (32 bits pid fix for 2.5.31)

	* gui/oprof_start_config.h: use pid_t

	* libutil/op_fileio.c: op_read_file(), op_write_file(), use %lu
	  and cast, uglier solution but more portable than last fix

	* utils/op_start: typo

2002-08-14  William Cohen  <wcohen@nc.rr.com>
 
	* libutil/op_fileio.c (op_read_file): Change fprintf specifier.
	(op_write_file): Ditto.

2002-08-08  Will Cohen  <wcohen@nc.rr.com>

	* utils/op_start: Do not compute quantity of counters from
	  CPUTYPE. Get counter names directly from /proc/sys/dev/oprofile.

2002-08-06  Philippe Elie  <phil.el@wanadoo.fr>

	* Makefile.in:
	* doc/Makefile.in: delete generated doc only on a make maintainerclean

	* pp/opp_symbol.cpp: small cleanup

2002-08-06  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_parse.c:
	* dae/opd_proc.c: